--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <button class= "prueba" type="button">Sumar</button>  
         <p id="sumando"></p>  
+        <p id="sumando2"></p>
     </div>
 <script src="./main.js"></script> 
 </body>  
