--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
             <label for="">Nota 3:</label> 
             <input id="num3">  
         </div>
-        <button class= "prueba" type="button">Sumar</button>  
-        <p id="sumando"></p>  
-        <p id="sumando2"></p>
+        <div class="botones">
+            <button class= "prueba" type="button">Calcular</button> 
+            <button class= "mejorPromedio" type="button">Mejor Promedio</button>   
+        </div>
+        <p id="prueba"></p>  
+        <p id="mejorPromedio"></p>
     </div>
 <script src="./main.js"></script> 
 </body>  
